--- a/Test2/test/css/test_topbar.css
+++ b/Test2/test/css/test_topbar.css
@@ -78,7 +78,7 @@ li a:hover, li a:active {
 }
 
 #color1 {
-	background-color: #c9d8f7;
+	background-color: #ffd0ca;
 	height: 15px;
 	width: 25%;
 	float: left;
@@ -86,7 +86,7 @@ li a:hover, li a:active {
 }
 
 #color2 {
-	background-color: #96b1e7;
+	background-color: #ffa89c;
 	height: 15px;
 	width: 25%;
 	float: left;
@@ -94,7 +94,7 @@ li a:hover, li a:active {
 }
 
 #color3 {
-	background-color: #4b71bc;
+	background-color: #ff6854;
 	height: 15px;
 	width: 25%;
 	float: left;
@@ -102,7 +102,7 @@ li a:hover, li a:active {
 }
 
 #color4 {
-	background-color: #2f56a5;
+	background-color: #f84932;
 	height: 15px;
 	width: 25%;
 	float: left;
